# go/coinstacks/binance/api/swagger.json
@@ -7,8 +7,8 @@
   ],
   "swagger": "2.0",
   "info": {
-    "description": "Provides access to cosmos chain data.",
-    "title": "Cosmos Unchained API",
+    "description": "Provides access to binance chain data.",
+    "title": "Binance Unchained API",
     "license": {
       "name": "MIT",
       "url": "http://opensource.org/licenses/MIT"
@@ -273,147 +273,17 @@
           }
         }
       }
-    },
-    "/api/v1/validators": {
-      "get": {
-        "tags": [
-          "v1"
-        ],
-        "summary": "Get the list of current validators.",
-        "operationId": "GetValidators",
-        "parameters": [
-          {
-            "type": "string",
-            "x-go-name": "Cursor",
-            "description": "Pagination cursor from previous response or empty string for first page fetch",
-            "name": "cursor",
-            "in": "query"
-          },
-          {
-            "type": "integer",
-            "format": "int64",
-            "x-go-name": "PageSize",
-            "description": "Page size",
-            "name": "pageSize",
-            "in": "query"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Validators",
-            "schema": {
-              "$ref": "#/definitions/Validators"
-            }
-          },
-          "500": {
-            "description": "InternalServerError",
-            "schema": {
-              "$ref": "#/definitions/InternalServerError"
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/validators/{pubkey}": {
-      "get": {
-        "tags": [
-          "v1"
-        ],
-        "summary": "Get a specific validator.",
-        "operationId": "GetValidator",
-        "parameters": [
-          {
-            "type": "string",
-            "x-go-name": "Pubkey",
-            "description": "Account address or xpub",
-            "name": "pubkey",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Validator",
-            "schema": {
-              "$ref": "#/definitions/Validator"
-            }
-          },
-          "500": {
-            "description": "InternalServerError",
-            "schema": {
-              "$ref": "#/definitions/InternalServerError"
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/validators/{pubkey}/txs": {
-      "get": {
-        "tags": [
-          "v1"
-        ],
-        "summary": "Get paginated transaction history for a validator.",
-        "operationId": "ValidatorTxHistory",
-        "parameters": [
-          {
-            "type": "string",
-            "x-go-name": "Pubkey",
-            "description": "Account address or xpub",
-            "name": "pubkey",
-            "in": "path",
-            "required": true
-          },
-          {
-            "type": "string",
-            "x-go-name": "Cursor",
-            "description": "Pagination cursor from previous response or empty string for first page fetch",
-            "name": "cursor",
-            "in": "query"
-          },
-          {
-            "type": "integer",
-            "format": "int64",
-            "x-go-name": "PageSize",
-            "description": "Page size",
-            "name": "pageSize",
-            "in": "query"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "TxHistory",
-            "schema": {
-              "$ref": "#/definitions/TxHistory"
-            }
-          },
-          "400": {
-            "description": "BadRequestError",
-            "schema": {
-              "$ref": "#/definitions/BadRequestError"
-            }
-          },
-          "500": {
-            "description": "InternalServerError",
-            "schema": {
-              "$ref": "#/definitions/InternalServerError"
-            }
-          }
-        }
-      }
     }
   },
   "definitions": {
     "Account": {
-      "description": "Contains info about account details for an address or xpub",
+      "description": "Contains info about account details for an address",
       "allOf": [
         {
           "$ref": "#/definitions/CosmosSDKAccount"
-        },
-        {
-          "$ref": "#/definitions/Staking"
         }
       ],
-      "x-go-package": "github.com/shapeshift/unchained/coinstacks/cosmos/api"
+      "x-go-package": "github.com/shapeshift/unchained/coinstacks/binance/api"
     },
     "ApiError": {
       "description": "Generic api error for handling failed requests",
@@ -687,46 +557,9 @@
       "allOf": [
         {
           "$ref": "#/definitions/CosmosSDKInfo"
-        },
-        {
-          "type": "object",
-          "required": [
-            "totalSupply",
-            "bondedTokens",
-            "apr",
-            "annualProvisions",
-            "communityTax"
-          ],
-          "properties": {
-            "annualProvisions": {
-              "type": "string",
-              "x-go-name": "AnnualProvisions",
-              "example": "29255184955917.174457731278996910"
-            },
-            "apr": {
-              "type": "string",
-              "x-go-name": "APR",
-              "example": "0.1541068456"
-            },
-            "bondedTokens": {
-              "type": "string",
-              "x-go-name": "BondedTokens",
-              "example": "186039736185555"
-            },
-            "communityTax": {
-              "type": "string",
-              "x-go-name": "CommunityTax",
-              "example": "0.020000000000000000"
-            },
-            "totalSupply": {
-              "type": "string",
-              "x-go-name": "TotalSupply",
-              "example": "291107634956378"
-            }
-          }
         }
       ],
-      "x-go-package": "github.com/shapeshift/unchained/coinstacks/cosmos/api"
+      "x-go-package": "github.com/shapeshift/unchained/coinstacks/binance/api"
     },
     "InternalServerError": {
       "description": "Contains info about a 500 Internal Server Error response",
